@@ -2,6 +2,10 @@
     New OS Support
     * Recognize "Haiku", a resurrection of BeOS.
 
+    New Features
+    - META.yml now includes ExtUtils::MakeMaker in build_requires by
+      default.
+
 
 6.48  Mon Oct 20 11:18:13 PDT 2008
     Test Fixes
